--- a/TODO
+++ b/TODO
@@ -20,8 +20,6 @@ however it would then be more costly to build the sparse eigenvectors matrix
 
 
 
-find out why SelfAdjointEigenSolver does not work with sparse matrices
-
 maybe implement Block for sparse matrices (a Block mapping sparse to dense --
 this would avoid one matrix copy operation, and I wouldn't need to allocate a
 dense matrix in diagonalizeUsingSymmetries at all)
@@ -29,5 +27,6 @@ dense matrix in diagonalizeUsingSymmetries at all)
 the question is whether the dynamic memory allocation really is that expensive
 
 
-something like "SelfAdjointEigenSolver<DMatrix> es(m.block(0,0,10,10));" seems to work
+---
 
+Even though I supposedly optimized memory usage, now the usage is still > 2.2GB. Maybe there's a memory leak somewhere. Probably best to use valgrind.
