Proper chem. potential. Changed units. Bug fixes.
 * Finally fixed chemical potential term. Hence mu -> -mu.
 * eV and nm are now the default units. They are also used internally
   (in Coulomb potential).
 * Command line switch "--natural" to set natural units (only sets
   epsilon_r accordingly). This enables the old default behaviour.
 * Fixed bug: lambdaD was not set from command line
 * Fixed bug: do not use compensation charge (e.g. n-q) for chemical
   potential and external potential term (this bug did not affect
   observables, but it's a bug nonetheless)

--- a/README
+++ b/README
@@ -1,6 +1,14 @@
 ExactDiagonalization
 ====================
 
+TODO
+----
+
+ * unit test for natural units
+ * change command line parameters, so that they resemble command line
+   parameters of the classical qca code as much as possible
+
+
 Installation
 ------------
 
